--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
 	<title>暑假英语单词背诵</title>
+	
 </head>
 <body>
-	<h1>hello world</h1>
+	<h1>暑假英语单词背诵</h1>
+	<div class="word"></div>
 </body>
 </html>
