modified:   index.html 	new file:   style.css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>暑假英语单词背诵</title>
-	
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<h1>暑假英语单词背诵</h1>
