modified:   index.html 	new file:   test.js 	new file:   word/7.26.txt

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8"> 
 	<title>暑假英语单词背诵</title>
+	<scirpt type="text/javascript" src="test.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<h1>暑假英语单词背诵</h1>
-	<div class="word">word</div>
+	<button onclick="fun_1()">开始今天的单词吧！</button>
+	<div class="word" id="word">word</div>
 </body>
 </html>
