--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8"> 
 	<title>暑假英语单词背诵</title>
-	<scirpt type="text/javascript" src="test.js"></script>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<scirpt type="text/javascript" src="./test.js"></script>
+	<link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
 	<h1>暑假英语单词背诵</h1>
