modified:   index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<h1>暑假英语单词背诵</h1>
-	<button onclick="fun_1()">开始今天的单词吧！</button>
+	<button onclick="loadWord()">开始今天的单词吧！</button>
 	<div class="word" id="word">word</div>
 </body>
 </html>
