modified:   index.html 	renamed:    test.js -> script.js

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8"> 
 	<title>暑假英语单词背诵</title>
-	<scirpt type="text/javascript" src="./test.js"></script>
+	<scirpt type="text/javascript" src="./script.js"></script>
 	<link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
