modified:   index.html

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 	<meta charset="utf-8"> 
 	<title>暑假英语单词背诵</title>
 	<link rel="stylesheet" type="text/css" href="./style.css">
+	<scirpt type="text/javascript" src="./script.js"></script>
 </head>
 <body>
 	<h1>暑假英语单词背诵</h1>
-	<button onclick="loadWord()">开始今天的单词吧！</button>
-	<div class="word" id="word">word</div>
-	<scirpt type="text/javascript" src="./script.js"></script>
+	<div>
+		<button onclick="loadWord()">
+			开始今天的单词吧！
+		</button>
+		<div class="word" id="word">word</div>
+	</div>
 </body>
 </html>
