modified:   index.html

--- a/index.html
+++ b/index.html
@@ -4,27 +4,7 @@
 	<meta charset="utf-8"> 
 	<title>暑假英语单词背诵</title>
 	<link rel="stylesheet" type="text/css" href="./style.css">
-	<scirpt>
-		function loadWord(){
-			var request = new XMLHttpRequest();
-			request.open('GET','./word/7.26.json');
-			request.responseType='json';
-			request.send();
-			request.onload = function(){
-				var word = request.response;
-				showWord(word);
-			}
-		}
-		function showWord(word){
-			var Word = document.getElementById('word');
-			var strWord
-			strWord = stringWord(word)
-			Word.innerHTML=strWord;
-		}
-		function stringWord(word){
-			var Word = word
-		}
-	</script>
+	<script type="text/javascript" src="./script.js"></script>
 </head>
 <body>
 	<h1>暑假英语单词背诵</h1>
