--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<h1>暑假英语单词背诵</h1>
 	<div>
-		<button onclick="loadWord()">
+		<button onclick="loadWord()" class = 'button_show'>
 			开始今天的单词吧！
 		</button>
 		<div class="word" id="word">word</div>
