modified:   index.html 	modified:   script.js 	modified:   style.css 	modified:   word/7.26.json

--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<meta charset="utf-8"> 
+	<meta charset="utf-8">
 	<title>暑假英语单词背诵</title>
 	<link rel="stylesheet" type="text/css" href="./style.css">
 	<script type="text/javascript" src="./script.js"></script>
 </head>
+
 <body>
 	<h1>暑假英语单词背诵</h1>
 	<div>
-		<button onclick="loadWord()" class = 'button_show'>
-			开始今天的单词吧！
+		<button onclick="loadWord()" class='button_show'>
+			<span>开始今天的单词吧！</span>
 		</button>
 		<div class="word" id="word">word</div>
 	</div>
 </body>
+
 </html>
