--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 	<h1>暑假英语单词背诵</h1>
 	<div>
 		<button onclick="loadWord()" class='button_show'>
-			<span>开始今天的单词吧！</span>
+			开始今天的单词吧！
+			<span></span>
 		</button>
 		<div class="word" id="word">word</div>
 	</div>
