modified:   index.html 	modified:   script.js 	modified:   "\346\257\217\346\227\245\345\215\225\350\257\215/7.26.json" 	renamed:    "\346\257\217\346\227\245\345\215\225\350\257\215/7.31.json" -> "\346\257\217\346\227\245\345\215\225\350\257\215/8.10.json" 	renamed:    "\346\257\217\346\227\245\345\215\225\350\257\215/8.1.json" -> "\346\257\217\346\227\245\345\215\225\350\257\215/8.11.json" 	new file:   "\346\257\217\346\227\245\345\215\225\350\257\215/8.5.json" 	renamed:    "\346\257\217\346\227\245\345\215\225\350\257\215/7.27.json" -> "\346\257\217\346\227\245\345\215\225\350\257\215/8.6.json" 	renamed:    "\346\257\217\346\227\245\345\215\225\350\257\215/7.28.json" -> "\346\257\217\346\227\245\345\215\225\350\257\215/8.7.json" 	renamed:    "\346\257\217\346\227\245\345\215\225\350\257\215/7.29.json" -> "\346\257\217\346\227\245\345\215\225\350\257\215/8.8.json" 	renamed:    "\346\257\217\346\227\245\345\215\225\350\257\215/7.30.json" -> "\346\257\217\346\227\245\345\215\225\350\257\215/8.9.json"

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<h1>暑假英语单词背诵</h1>
 	<div>
-		<button onclick="loadWord()" class='button_show'>
+		<button onclick="showword()" class='button_show'>
 			开始今天的单词吧！
 			<span></span>
 		</button>
