--- a/index.html
+++ b/index.html
@@ -9,13 +9,33 @@
 </head>
 
 <body>
+	<div>历史</div>
 	<h1>暑假英语单词背诵</h1>
 	<div>
 		<button onclick="showword()" class='button_show'>
 			开始今天的单词吧！
-			<span></span>
 		</button>
 		<div class="word" id="word">word</div>
+		<div class="wordCard">
+			<div class="inner">
+				<span class="pricing">
+					<span>
+						返回
+					</span>
+				</span>
+				<p class="Word">Word</p>
+				<p class="posTag">posTag</p>
+				<div class="action">
+				<a href="#" class="button1">
+					我认识
+				</a>
+				<a href="#" class="button2">
+					我不认识
+				</a>
+				</div>
+			</div>
+		</div>
+		</div>
 	</div>
 </body>
 
