modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
 </head>
 
 <body>
+	<ul>
+		<li><a class="active" href="#home">主页</a></li>
+		<li><a href="#news">新闻</a></li>
+		<li><a href="#contact">联系</a></li>
+		<li><a href="#about">关于</a></li>
+	</ul>
 	<div>历史</div>
-	<h1>暑假英语单词背诵</h1>
+	<!-- <h1>暑假英语单词背诵</h1> -->
 	<div>
 		<button onclick="showword()" class='button_show'>
 			开始今天的单词吧！
 		</button>
-		<div class="word" id="word">word</div>
+		<!-- <div class="word" id="word">word</div> -->
 		<div class="wordCard">
 			<div class="inner">
 				<span class="pricing">
@@ -26,16 +32,16 @@
 				<p class="Word">Word</p>
 				<p class="posTag">posTag</p>
 				<div class="action">
-				<a href="#" class="button1">
-					我认识
-				</a>
-				<a href="#" class="button2">
-					我不认识
-				</a>
+					<a href="#" class="button1">
+						我认识
+					</a>
+					<a href="#" class="button2">
+						我不认识
+					</a>
 				</div>
 			</div>
 		</div>
-		</div>
+	</div>
 	</div>
 </body>
 
