--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
 	<ul>
 		<li><a class="active" href="#home">主页</a></li>
-		<li><a href="#news">新闻</a></li>
-		<li><a href="#contact">联系</a></li>
+		<li><a href="#history">历史</a></li>
+		<li><a href="#all">所有单词</a></li>
 		<li><a href="#about">关于</a></li>
 	</ul>
 	<div>历史</div>
