modified:   about/index.html 	modified:   history/index.html 	deleted:    history/script.js 	modified:   index.html 	new file:   word/index.html

--- a/word/index.html
+++ b/word/index.html
@@ -3,17 +3,17 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>暑假英语单词背诵</title>
-	<link rel="stylesheet" type="text/css" href="./style.css">
-	<script type="text/javascript" src="./script.js"></script>
+	<title>所有单词</title>
+	<link rel="stylesheet" type="text/css" href="../style.css">
+	<script type="text/javascript" src="../script.js"></script>
 </head>
 
 <body>
 	<ul>
-		<li><a class="active" href="./">主页</a></li>
-		<li><a href="./history/">历史</a></li>
-		<li><a href="./word/">所有单词</a></li>
-		<li><a href="./about/">关于</a></li>
+		<li><a class="active" href="../">主页</a></li>
+		<li><a href="../history/">历史</a></li>
+		<li><a href="../word/">所有单词</a></li>
+		<li><a href="../about/">关于</a></li>
 	</ul>
 	<!-- <div>历史</div> -->
 	<!-- <h1>暑假英语单词背诵</h1> -->
