--- a/word/index.html
+++ b/word/index.html
@@ -18,9 +18,9 @@
 	<!-- <div>历史</div> -->
 	<!-- <h1>暑假英语单词背诵</h1> -->
 	<div>
-		<button onclick="showword()" class='button_show'>
+		<!-- <button onclick="showword()" class='button_show'>
 			开始今天的单词吧！
-		</button>
+		</button> -->
 		<!-- <div class="word" id="word">word</div> -->
 		<div class="wordCard">
 			<div class="inner">
