modified:   history/index.html 	modified:   index.html 	modified:   script.js 	modified:   word/index.html

--- a/history/index.html
+++ b/history/index.html
@@ -6,6 +6,7 @@
 	<title>历史单词</title>
 	<link rel="stylesheet" type="text/css" href="../style.css">
 	<script type="text/javascript" src="../script.js"></script>
+	<script>Show.showword('history')</script>
 </head>
 
 <body>
@@ -22,25 +23,25 @@
 			开始今天的单词吧！
 		</button> -->
 		<!-- <div class="word" id="word">word</div> -->
-		<div class="wordCard">
-			<div class="inner">
-				<span class="pricing">
-					<span>
-						返回
-					</span>
+		<div class="wordCard" id="wordCard>
+			<div class=" inner">
+			<span class="pricing">
+				<span>
+					返回
 				</span>
-				<p class="Word">Word</p>
-				<p class="posTag">posTag</p>
-				<div class="action">
-					<a href="#" class="button1">
-						我认识
-					</a>
-					<a href="#" class="button2">
-						我不认识
-					</a>
-				</div>
+			</span>
+			<p class="Word">Word</p>
+			<p class="posTag">posTag</p>
+			<div class="action">
+				<a href="#" class="button1">
+					我认识
+				</a>
+				<a href="#" class="button2">
+					我不认识
+				</a>
 			</div>
 		</div>
+	</div>
 	</div>
 	</div>
 </body>
