--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>暑假英语单词背诵</title>
 	<link rel="stylesheet" type="text/css" href="./style.css">
 	<script type="text/javascript" src="./script.js"></script>
+	<script>wordCard.style.display = 'none'</script>
 </head>
 
 <body>
@@ -18,29 +19,29 @@
 	<!-- <div>历史</div> -->
 	<!-- <h1>暑假英语单词背诵</h1> -->
 	<div>
-		<button onclick="showword()" class='button_show'>
+		<button onclick="Show.showword()" class='button_show'>
 			开始今天的单词吧！
 		</button>
 		<!-- <div class="word" id="word">word</div> -->
-		<div class="wordCard">
-			<div class="inner">
-				<span class="pricing">
-					<span>
-						返回
-					</span>
+		<div class="wordCard" id="wordCard>
+			<div class=" inner">
+			<span class="pricing">
+				<span>
+					返回
 				</span>
-				<p class="Word">Word</p>
-				<p class="posTag">posTag</p>
-				<div class="action">
-					<a href="#" class="button1">
-						我认识
-					</a>
-					<a href="#" class="button2">
-						我不认识
-					</a>
-				</div>
+			</span>
+			<p class="Word">Word</p>
+			<p class="posTag">posTag</p>
+			<div class="action">
+				<a href="#" class="button1">
+					我认识
+				</a>
+				<a href="#" class="button2">
+					我不认识
+				</a>
 			</div>
 		</div>
+	</div>
 	</div>
 	</div>
 </body>
