modified:   index.html 	modified:   script.js

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 		<!-- <div class="word" id="word">word</div> -->
 		<div class="wordCard" id="wordCard>
 			<div class=" inner">
-			<span class="pricing">
+			<span class="pricing">n
 				<span>
-					返回
+					/N
 				</span>
 			</span>
 			<p class="Word">Word</p>
