modified:   history/index.html 	modified:   index.html 	modified:   script.js 	modified:   word/index.html

--- a/history/index.html
+++ b/history/index.html
@@ -41,7 +41,7 @@
 				</div>
 			</div>
 		</div>
-		<script>Show.showword('history')</script>
+		<script>Show().showword('history')</script>
 	</div>
 </body>
 
