--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<!-- <div>历史</div> -->
 	<!-- <h1>暑假英语单词背诵</h1> -->
 	<div>
-		<button onclick="Show.showword()" class='button_show'>
+		<button onclick="Show().showword('main')" class='button_show'>
 			开始今天的单词吧！
 		</button>
 		<!-- <div class="word" id="word">word</div> -->
