--- a/word/index.html
+++ b/word/index.html
@@ -41,7 +41,7 @@
 				</div>
 			</div>
 		</div>
-		<script>Show.showword('all')</script>
+		<script>Show().showword('all')</script>
 	</div>
 </body>
 
