modified:   history/index.html 	modified:   index.html 	modified:   script.js 	modified:   word/index.html

--- a/word/index.html
+++ b/word/index.html
@@ -29,7 +29,7 @@
 						返回
 					</span>
 				</span>
-				<p class="Word">Word</p>
+				<p class="Word" id="Word">Word</p>
 				<p class="posTag">posTag</p>
 				<div class="action">
 					<a href="#" class="button1">
@@ -41,7 +41,7 @@
 				</div>
 			</div>
 		</div>
-		<script>Show().showword('all')</script>
+		<script>showword('all')</script>
 	</div>
 </body>
 
