--- a/history/index.html
+++ b/history/index.html
@@ -41,7 +41,7 @@
 				</div>
 			</div>
 		</div>
-		<script>Show().showword('history')</script>
+		<script>showword('history')</script>
 	</div>
 </body>
 
