--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 	<!-- <div>历史</div> -->
 	<!-- <h1>暑假英语单词背诵</h1> -->
 	<div>
-		<button onclick="showword('main')" class='button_show'>
-			开始今天的单词吧！
-		</button>
+		<div class='action2'>
+			<a onclick="showword('main')" class='button_show'>
+				开始今天的单词吧！
+			</a>
+		</div>
 		<!-- <div class="word" id="word">word</div> -->
 		<div class="wordCard" id="wordCard">
 			<div class=" inner">
