--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</ul>
 	<!-- <div>历史</div> -->
 	<!-- <h1>暑假英语单词背诵</h1> -->
-	<div>
+	<div class="main">
 		<div class='action2'>
 			<a onclick="showword('main')" class='button_show'>
 				开始今天的单词吧！
