modified:   index.html 	modified:   script.js

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<!-- <div>历史</div> -->
 	<!-- <h1>暑假英语单词背诵</h1> -->
 	<div class="main">
-		<div class='action2'>
+		<div class='action2' id="action2">
 			<a onclick="showword('main')" class='button_show'>
 				开始今天的单词吧！
 			</a>
