modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-
+<!-- Version : 1.0 -->
+<!-- Date : 2023.7.29 10:54 -->
 <head>
 	<meta charset="utf-8">
 	<title>暑假英语单词背诵</title>
