modified:   about/index.html 	modified:   history/index.html 	modified:   index.html 	modified:   main.py 	modified:   pythonKu/randomtuple.py 	modified:   pythonKu/sort.py 	modified:   script.js 	modified:   style.css 	modified:   translation/keyAndToken.py 	modified:   translation/main.py 	modified:   word/index.html

--- a/about/index.html
+++ b/about/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-
+<!-- Version : 1.0.1.1 -->
+<!-- Date : 2023/07/29 11:00 -->
+<!-- Author : Long17369 -->
 <head>
 	<meta charset="utf-8">
-	<title>历史单词</title>
+	<title>关于</title>
 	<link rel="stylesheet" type="text/css" href="../style.css">
 	<script type="text/javascript" src="../script.js"></script>
 </head>
