--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-<!-- Version : 1.0.0.1 -->
-<!-- Date : 2023.7.29 11:00 -->
-
+<!-- Version : 1.0.1.1 -->
+<!-- Date : 2023/07/29 11:00 -->
+<!-- Author : Long17369 -->
 <head>
 	<meta charset="utf-8">
 	<title>暑假英语单词背诵</title>
