--- a/word/index.html
+++ b/word/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<!-- Version : 1.0.1.1 -->
-<!-- Date : 2023/07/29 11:00 -->
+<!-- Version : 1.0.1.02 -->
+<!-- Date : 2023/07/29 11:50 -->
 <!-- Author : Long17369 -->
 <head>
 	<meta charset="utf-8">
@@ -19,7 +19,7 @@
 	</ul>
 	<!-- <div>历史</div> -->
 	<!-- <h1>暑假英语单词背诵</h1> -->
-	<div>
+	<div class="main">
 		<!-- <button onclick="showword()" class='button_show'>
 			开始今天的单词吧！
 		</button> -->
