modified:   about/index.html 	modified:   history/index.html 	modified:   index.html 	modified:   script.js 	modified:   word/index.html

--- a/word/index.html
+++ b/word/index.html
@@ -3,11 +3,17 @@
 <!-- Version : 1.0.1.02 -->
 <!-- Date : 2023/07/29 11:50 -->
 <!-- Author : Long17369 -->
+
 <head>
 	<meta charset="utf-8">
 	<title>所有单词</title>
 	<link rel="stylesheet" type="text/css" href="../style.css">
 	<script type="text/javascript" src="../script.js"></script>
+	<script type="text/javascript">
+		var html = document.querySelector('html');
+		var rem = html.offsetWidth / 6.4;
+		html.style.fontSize = rem + "px";
+	</script>
 </head>
 
 <body>
