--- a/about/index.html
+++ b/about/index.html
@@ -3,11 +3,17 @@
 <!-- Version : 1.0.1.1 -->
 <!-- Date : 2023/07/29 11:00 -->
 <!-- Author : Long17369 -->
+
 <head>
 	<meta charset="utf-8">
 	<title>关于</title>
 	<link rel="stylesheet" type="text/css" href="../style.css">
 	<script type="text/javascript" src="../script.js"></script>
+	<script type="text/javascript">
+		var html = document.querySelector('html');
+		var rem = html.offsetWidth / 6.4;
+		html.style.fontSize = rem + "px";
+	</script>
 </head>
 
 <body>
@@ -18,11 +24,11 @@
 		<li><a href="../about/">关于</a></li>
 	</ul>
 	<!-- <div>历史</div> -->
-    <div class="wordCard">
-        <a class="Word">
-            None
-        </a>
-    </div>
+	<div class="wordCard">
+		<a class="Word">
+			None
+		</a>
+	</div>
 </body>
 
 </html>
