--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <!-- Version : 1.0.1.1 -->
 <!-- Date : 2023/07/29 11:00 -->
 <!-- Author : Long17369 -->
+
 <head>
 	<meta charset="utf-8">
 	<title>暑假英语单词背诵</title>
 	<link rel="stylesheet" type="text/css" href="./style.css">
 	<script type="text/javascript" src="./script.js"></script>
+	<script type="text/javascript">
+		var html = document.querySelector('html');
+		var rem = html.offsetWidth / 6.4;
+		html.style.fontSize = rem + "px";
+	</script>
 </head>
 
 <body>
@@ -38,7 +44,7 @@
 				<p class="Word">Word</p>
 				<p class="posTag">posTag</p>
 				<div class="action">
-					<a href="#" class="button1">
+					<a onclick="Next('next','main')" class="button1">
 						我认识
 					</a>
 					<a href="#" class="button2">
