--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<!-- Version : 1.0.1.02 -->
-<!-- Date : 2023/07/29 12:05 -->
+<!-- Version : 1.0.1.03 -->
+<!-- Date : 2023/07/29 12:40 -->
 <!-- Author : Long17369 -->
 
 <head>
@@ -36,8 +36,8 @@
 		<!-- <div class="word" id="word">word</div> -->
 		<div class="wordCard" id="wordCard">
 			<div class=" inner">
-				<span class="pricing">n
-					<span>
+				<span class="pricing" id="count">n
+					<span id="Count">
 						/N
 					</span>
 				</span>
