--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<!-- Version : 1.0.1.02 -->
-<!-- Date : 2023/07/29 12:05 -->
+<!-- Version : 1.0.1.03 -->
+<!-- Date : 2023/07/29 20：30 -->
 <!-- Author : Long17369 -->
 
 <head>
@@ -24,10 +24,15 @@
 		<li><a href="../about/">关于</a></li>
 	</ul>
 	<!-- <div>历史</div> -->
-	<div class="wordCard">
+	<!-- <div class="wordCard">
 		<a class="Word">
 			None
 		</a>
+	</div> -->
+	<h1>关于</h1>
+	<div class="main">
+		<a style="color: #c5c76cd5;">联系我:</a>
+		<a style="color: #2ee7ffd5;" href="">Long17369</a>
 	</div>
 </body>
 
