modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<!-- Version : 1.0.1.03 -->
-<!-- Date : 2023/07/29 12:40 -->
+<!-- Version : 1.0.1.04 -->
+<!-- Date : 2023/07/29 20:40 -->
 <!-- Author : Long17369 -->
 
 <head>
@@ -36,7 +36,10 @@
 		<!-- <div class="word" id="word">word</div> -->
 		<div class="wordCard" id="wordCard">
 			<div class=" inner">
-				<span class="pricing" id="count">n
+				<span class="pricing">
+					<span id="count">
+						n
+					</span>
 					<span id="Count">
 						/N
 					</span>
