modified:   about/index.html 	modified:   style.css

--- a/about/index.html
+++ b/about/index.html
@@ -29,8 +29,8 @@
 			None
 		</a>
 	</div> -->
-	<h1>关于</h1>
-	<div class="main">
+	<h1 class="about">关于</h1>
+	<div class="about">
 		<a style="color: #c5c76cd5;">联系我:</a>
 		<a style="color: #2ee7ffd5;" href="">Long17369</a>
 	</div>
