modified:   index.html 	modified:   script.js

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						/N
 					</span>
 				</span>
-				<p class="Word">Word</p>
+				<p class="Word" id="Word">Word</p>
 				<p class="posTag">posTag</p>
 				<div class="action">
 					<a onclick="Next('next','main')" class="button1">
