modified:   index.html

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 				<span class="pricing">
 					<span id="count">
 						n
-					</span>
+					</span>/
 					<span id="Count">
-						/N
+						N
 					</span>
 				</span>
 				<p class="Word" id="Word">Word</p>
