modified:   index.html 	modified:   script.js

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 					</span>
 				</span>
 				<p class="Word" id="Word">Word</p>
-				<p class="posTag">posTag</p>
-				<div class="action">
+				<p class="posTag" id="posTag">posTag</p>
+				<div class="action" id="action">
 					<a onclick="Next('next','main')" class="button1">
 						我认识
 					</a>
