modified:   index.html 	modified:   script.js

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		<!-- <div class="word" id="word">word</div> -->
 		<div class="wordCard" id="wordCard">
 			<div class=" inner">
-				<span class="pricing">
+				<span class="pricing" id="pricing">
 					<span id="count">
 						n
 					</span>/
