--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<!-- Version : 1.0.1.03 -->
-<!-- Date : 2023/07/29 20：30 -->
+<!-- Version : 1.0.2.00 -->
+<!-- Date : 2023/07/30 17:19 -->
 <!-- Author : Long17369 -->
 
 <head>
@@ -30,10 +30,22 @@
 		</a>
 	</div> -->
 	<h1 class="about">关于</h1>
-	<div class="about">
-		<a style="color: #c5c76cd5;">联系我:</a>
-		<a style="color: #2ee7ffd5;" href="">Long17369</a>
-	</div>
+	<span>
+		<div class="about">
+			<a style="color: #c5c76cd5;">联系我:</a>
+			<a style="color: #2ee7ffd5;" href="mailto:Long17369@foxmail.com">邮箱</a>
+			<a style="color: #103579f1;" href="https://wpa.qq.com/msgrd?v=3&uin=1975088762&site=qq&menu=yes">QQ</a>
+		</div>
+		<div class="about">
+			<a style="color: #b6c76cd5;">我的github主页:</a>
+			<a style="color: #3cf9fff3;" href="github.com/Long17369">Long17369</a>
+		</div>
+		<div>
+			<a>有bug:</a>
+			<a href="mailto:Long17369@foxmail.com">邮箱反馈</a>
+			<a href="https://wpa.qq.com/msgrd?v=3&uin=1975088762&site=qq&menu=yes">QQ反馈</a>
+		</div>
+	</span>
 </body>
 
 </html>
