--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<!-- Version : 1.0.2.00 -->
+<!-- Version : 1.0.2.00debuged -->
 <!-- Date : 2023/07/30 17:19 -->
 <!-- Author : Long17369 -->
 
@@ -30,13 +30,13 @@
 		</a>
 	</div> -->
 	<h1 class="about">关于</h1>
-	<span>
-		<div class="about">
+	<span  class="about">
+		<div>
 			<a style="color: #c5c76cd5;">联系我:</a>
 			<a style="color: #2ee7ffd5;" href="mailto:Long17369@foxmail.com">邮箱</a>
 			<a style="color: #103579f1;" href="https://wpa.qq.com/msgrd?v=3&uin=1975088762&site=qq&menu=yes">QQ</a>
 		</div>
-		<div class="about">
+		<div>
 			<a style="color: #b6c76cd5;">我的github主页:</a>
 			<a style="color: #3cf9fff3;" href="github.com/Long17369">Long17369</a>
 		</div>
