modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<!-- Version : 1.0.1.04 -->
-<!-- Date : 2023/07/29 20:40 -->
+<!-- Version : 1.0.1.05 -->
+<!-- Date : 2023/07/31 11:21 -->
 <!-- Author : Long17369 -->
 
 <head>
@@ -44,7 +44,7 @@
 						N
 					</span>
 				</span>
-				<p class="Word" id="Word">Word</p>
+				<p class="Word" id="Word">请稍等</p>
 				<p class="posTag" id="posTag">posTag</p>
 				<div class="action" id="action">
 					<a onclick="Next('next','main')" class="button1">
