modified:   about/index.html

--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<!-- Version : 1.0.2.00debuged -->
-<!-- Date : 2023/07/30 17:19 -->
+<!-- Version : 1.0.2.01 -->
+<!-- Date : 2023/07/31 11:37 -->
 <!-- Author : Long17369 -->
 
 <head>
@@ -38,7 +38,7 @@
 		</div>
 		<div>
 			<a style="color: #b6c76cd5;">我的github主页:</a>
-			<a style="color: #3cf9fff3;" href="github.com/Long17369">Long17369</a>
+			<a style="color: #3cf9fff3;" href="https://github.com/Long17369">Long17369</a>
 		</div>
 		<div>
 			<a>有bug:</a>
