modified:   index.html 	modified:   script.js

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<!-- Version : 1.0.1.05 -->
-<!-- Date : 2023/07/31 11:21 -->
+<!-- Version : 1.0.2.00 -->
+<!-- Date : 2023/07/31 18:26 -->
 <!-- Author : Long17369 -->
 
 <head>
@@ -50,7 +50,7 @@
 					<a onclick="Next('next','main')" class="button1">
 						我认识
 					</a>
-					<a href="#" class="button2">
+					<a onclick="showword('main')" class="button2">
 						我不认识
 					</a>
 				</div>
