modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<!-- Version : 1.0.2.00 -->
-<!-- Date : 2023/07/31 18:26 -->
+<!-- Version : 1.0.2.01 -->
+<!-- Date : 2023/07/31 19:30 -->
 <!-- Author : Long17369 -->
 
 <head>
@@ -50,7 +50,7 @@
 					<a onclick="Next('next','main')" class="button1">
 						我认识
 					</a>
-					<a onclick="showword('main')" class="button2">
+					<a onclick="showChinese('main')" class="button2">
 						我不认识
 					</a>
 				</div>
