--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<!-- Version : 1.0.2.01 -->
-<!-- Date : 2023/07/31 19:30 -->
+<!-- Version : 1.0.2.02 -->
+<!-- Date : 2023/0w/01 8:52 -->
 <!-- Author : Long17369 -->
 
 <head>
@@ -47,7 +47,7 @@
 				<p class="Word" id="Word">请稍等</p>
 				<p class="posTag" id="posTag">posTag</p>
 				<div class="action" id="action">
-					<a onclick="Next('next','main')" class="button1">
+					<a onclick="Next('main','next')" class="button1">
 						我认识
 					</a>
 					<a onclick="showChinese('main')" class="button2">
