--- a/about/index.html
+++ b/about/index.html
@@ -32,6 +32,10 @@
 	<h1 class="about">关于</h1>
 	<span  class="about">
 		<div>
+			<a >翻译来源：</a>
+			<a href="https://cn.bing.com/translator">微软翻译</a>
+		</div>
+		<div>
 			<a style="color: #c5c76cd5;">联系我:</a>
 			<a style="color: #2ee7ffd5;" href="mailto:Long17369@foxmail.com">邮箱</a>
 			<a style="color: #103579f1;" href="https://wpa.qq.com/msgrd?v=3&uin=1975088762&site=qq&menu=yes">QQ</a>
