--- a/word/index.html
+++ b/word/index.html
@@ -26,30 +26,36 @@
 	<!-- <div>历史</div> -->
 	<!-- <h1>暑假英语单词背诵</h1> -->
 	<div class="main">
-		<!-- <button onclick="showword()" class='button_show'>
-			开始今天的单词吧！
-		</button> -->
+		<div class='action2' id="action2">
+			<a onclick="showword('all')" class='button_show'>
+				开始随机20个单词吧！
+			</a>
+		</div>
+	</div>
+	<div class="main">
 		<!-- <div class="word" id="word">word</div> -->
 		<div class="wordCard" id="wordCard">
 			<div class=" inner">
-				<span class="pricing">
-					<span>
-						返回
+				<span class="pricing" id="pricing">
+					<span id="count">
+						n
+					</span>/
+					<span id="Count">
+						N
 					</span>
 				</span>
-				<p class="Word" id="Word">Word</p>
-				<p class="posTag">posTag</p>
-				<div class="action">
-					<a href="#" class="button1">
+				<p class="Word" id="Word">请稍等</p>
+				<p class="posTag" id="posTag">posTag</p>
+				<div class="action" id="action">
+					<a onclick="Next('all','next')" class="button1">
 						我认识
 					</a>
-					<a href="#" class="button2">
+					<a onclick="showChinese('all')" class="button2">
 						我不认识
 					</a>
 				</div>
 			</div>
 		</div>
-		<script>showword('all')</script>
 	</div>
 </body>
 
