modified:   select/index.html 	modified:   select/script.js

--- a/select/index.html
+++ b/select/index.html
@@ -17,7 +17,8 @@
 </head>
 
 <body>
-    <button onclick="select">抽取单词</button>
+    <button onclick="select()">抽取单词</button>
+    <button onclick="showChinese()">显示中文</button>
     <div class="word"></div>
 </body>
 
