--- a/select/index.html
+++ b/select/index.html
@@ -8,6 +8,7 @@
 	<meta charset="utf-8">
 	<title>暑假英语单词背诵</title>
 	<link rel="stylesheet" type="text/css" href="../style.css">
+	<script type="text/javascript" src="../js/jquery.min.js"></script>
 	<script type="text/javascript" src="./script.js"></script>
 	<script type="text/javascript">
 		var html = document.querySelector('html');
