modified:   select/index.html 	modified:   select/script.js 	modified:   style.css

--- a/select/index.html
+++ b/select/index.html
@@ -18,9 +18,24 @@
 </head>
 
 <body>
-    <button onclick="select()">抽取单词</button>
-    <button onclick="showChinese()">显示中文</button>
-    <div class="word"></div>
+	<div class="main">
+		<div class="action2">
+			<button onclick="select()" class="button_show2">抽取单词</button>
+		</div>
+	</div>
+	<!-- <button onclick="showChinese()">显示中文</button> -->
+	<div class="show_word">
+		<a id="word0" class="word_show"></a>
+		<a id="word1" class="word_show"></a>
+		<a id="word2" class="word_show"></a>
+		<a id="word3" class="word_show"></a>
+		<a id="word4" class="word_show"></a>
+		<a id="word5" class="word_show"></a>
+		<a id="word6" class="word_show"></a>
+		<a id="word7" class="word_show"></a>
+		<a id="word8" class="word_show"></a>
+		<a id="word9" class="word_show"></a>
+	</div>
 </body>
 
 </html>
