--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
 	<!-- <h1>暑假英语单词背诵</h1> -->
 	<div class="main">
 		<div class='action2' id="action2">
-			<a onclick="showword('main')" class='button_show'>
-				开始今天的单词吧！
+			<a>
+				<button onclick="showword('main')" class='button_show'>
+					开始今天的单词吧！
+				</button>
 			</a>
 		</div>
 	</div>
