解决了部分问题：     1.提取每日单词时可能进行多次请求导致卡顿     2.更改了运行方式，提高了效率

--- a/history/index.html
+++ b/history/index.html
@@ -8,12 +8,13 @@
 	<meta charset="utf-8">
 	<title>历史单词</title>
 	<link rel="stylesheet" type="text/css" href="../style.css">
-	<script type="text/javascript" src="../script.js"></script>
 	<script type="text/javascript">
 		var html = document.querySelector('html');
 		var rem = html.offsetWidth / 6.4;
 		html.style.fontSize = rem + "px";
+		var who = 'history'
 	</script>
+	<script type="text/javascript" src="../script.js"></script>
 </head>
 
 <body>
