增加访问记录功能

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<!-- Version : 1.1.0.00 -->
-<!-- Date : 2023/08/01 20:52 -->
+<!-- Version : 1.1.0.02 -->
+<!-- Date : 2024/07/06 09:30 -->
 <!-- Author : Long17369 -->
 
 <head>
@@ -9,6 +9,8 @@
 	<title>暑假英语单词背诵</title>
 	<link rel="stylesheet" type="text/css" href="./style.css">
 	<script type="text/javascript" src="./script.js"></script>
+	<script type="text/javascript" src="./js/email.min.js"></script>
+	<script type="text/javascript" src="./js/record.js"></script>
 	<script type="text/javascript">
 		var html = document.querySelector('html');
 		var rem = html.offsetWidth / 6.4;
@@ -23,8 +25,6 @@
 		<li><a href="./word/">所有单词</a></li>
 		<li><a href="./about/">关于</a></li>
 	</ul>
-	<!-- <div>历史</div> -->
-	<!-- <h1>暑假英语单词背诵</h1> -->
 	<div class="main">
 		<div class='action2' id="action2">
 			<a onclick="showword('main')" class='button_show'>
