--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <!-- Version : 1.1.0.00 -->
 <!-- Date : 2023/08/01 20:52 -->
 <!-- Author : Long17369 -->
